--- a/index.html
+++ b/index.html
@@ -213,6 +213,19 @@
         </div>
 
     </section>
+    <footer class="footer">
+        
+        <div class=" ">
+            <h1>Influencer Product</h1>
+            <h4>Copyright &copy; 2022 influencer products</h4>
+            <p>All rights reserved</p> 
+            <a href="#"><i class="fab fa-instagram social"></i></a>
+            <a href="#"><i class="fab fa-twitter social"></i></a>
+            <a href="#"><i class="fab fa-youtube social"></i></a>
+            <a href="#"><i class="fab fa-facebook-f social"></i></a>
+        </div>
+      
+    </footer>
 </body>
 
 </html>
