--- a/index.html
+++ b/index.html
@@ -217,18 +217,18 @@
             </div>
         </div>
         <div class="see-more">
-            <a href="#"> <p>See More <i class="fas fa-arrow-right"></i></p></a>
+            <a href="#"> <p>See More <i class="fas fa-arrow-right"></i></p> </a>
          </div>
     </section>
-    <section class="fun-section">
+    <section class="add-section">
         <div class="container">
-            <div class="fun">
+            <div class="add">
                 <h1>Photograpy</h1>
                 <p>Photograpy one of the famous and much more pleasureble profession . You can learn with us and you can join with us to be a professional photographer.. </p>
                 <a href="#"><button class="common-btn">Join With us
                     <i class="fas fa-arrow-right"></i></button></a>
             </div>
-            <div class="fun-img">
+            <div class="add-img">
                 <img src="first-influencer/images/photography.jpg" alt="">
             </div>
         </div>
